@@ -33,12 +33,7 @@ class OutputThread(multiprocessing.Process):
 # FIXME: move this into the generic backend code
 def login(backend):
     backend.bootstrap()
-    d = backend._unpackToTmpdir(backend.tarball)
-    print "logging into: '%s'" % d
-    backend._runInChroot(d, ["/bin/sh"])
-    print "Cleaning up"
-    if d:
-        shutil.rmtree(d)
+    backend.login()
 
 def flushBuffer(fd):
     sys.stdout.flush()
@@ -63,7 +58,7 @@ def testUpgrade(backend_name, profile, add_pkgs, quiet=False):
         return False
     print "Storing the result in '%s'" % backend.resultdir
     # setup output
-    outfile = os.path.join(backend.resultdir,"bootstrap.log")
+    outfile = os.path.join(backend.resultdir, "bootstrap.log")
     fd = os.open(outfile, os.O_WRONLY|os.O_CREAT|os.O_TRUNC, 0644)
     out = OutputThread(outfile)
     if not quiet:
@@ -139,6 +134,8 @@ if __name__ == "__main__":
 
     # FIXME: move this to a configuration
     base="/usr/share/auto-upgrade-tester/profiles/"
+    if not "/" in options.profile:
+        options.profile = base + options.profile
 
     res = True
     try:
@@ -162,8 +159,6 @@ if __name__ == "__main__":
             backend = createBackend(options.backend, options.profile)
             backend.genDiff()
         else:
-            if not "/" in options.profile:
-                options.profile = base + options.profile
             print "Testing '%s'" % options.profile
             res &= testUpgrade(options.backend, options.profile, add_pkgs, options.quiet)
     except Exception, e:
