@@ -33,11 +33,14 @@ Pockets=security,updates
 UpgradeFromDistOnBootstrap=true
 ;AddRepo=local_testing.list
 DpkgProgressLog=yes
+ResultDir=/var/cache/auto-upgrade-tester/result
 
 [KVM]
 Virtio=True
 VncNum=1
 SshPort=54322
+ImageDir=/var/cache/auto-upgrade-tester/
+CacheImageDir=/var/cache/auto-upgrade-tester/
 BaseImage=/var/cache/auto-upgrade-tester/jaunty-i386.qcow2
 ;SwapImage=jeos/swap.qcow2
 CacheBaseImage=yes
