@@ -22,8 +22,10 @@ UpgradeFromDistOnBootstrap=true
 WorkaroundNetworkManager=true
 RealReboot=yes
 ;AddRepo=testing.list
+ResultDir=/var/cache/auto-upgrade-tester/result
 
 [KVM]
+CacheImageDir=/var/cache/auto-upgrade-tester/
 BaseImage=/var/cache/auto-upgrade-tester/jaunty-i386.qcow2
 CacheBaseImage=yes
 ;SwapImage=jeos/swap.qcow2
